--- a/Tadekam.html
+++ b/Tadekam.html
@@ -3,6 +3,7 @@
 		<title>TadEkam</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="format-detection" content="telephone=no">
 		<link rel="shortcut icon" href="images/logo.png" />
 		<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -102,7 +103,7 @@
 						<li class="nav-item">
 							<div class="menuOption">
 								<a class="menuOptionText" id="ContactUsMenuHamburger" onclick="menuSelected(event,this.id,true)">
-									<div>Contact Us</div>
+									<div>Connect</div>
 								</a>
 							</div>
 						</li>
@@ -226,7 +227,7 @@
 						<div class="row textRow">
 							<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 							<div class="col-xs-8 col-sm-10 col-lg-8">
-								Guruji Naushir has been spreading the teaching's of Mahavatar Babaji since the year 2000, including all the knowledge he has acquired from other Gurus. He founded Tadekam in 2007 to bring all the teachings and spiritual practices under one umbrella. He is in constant communication with Mahavatar Babaji whom he met in 2010.
+								Guruji Naushir has been spreading the teachings of Mahavatar Babaji since the year 2000, including all the knowledge he has acquired from other Gurus. He founded Tadekam in 2007 to bring all the teachings and spiritual practices under one umbrella. He is in constant communication with Mahavatar Babaji whom he met in 2010.
 							</div>
 							<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 						</div>
@@ -468,7 +469,7 @@
 					<div class="row textRow">
 						<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 						<div class="col-xs-8 col-sm-10 col-lg-8">
-							For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now almost a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru….. Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
+							For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now more than a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru….. Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
 						</div>
 						<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					</div>
@@ -483,7 +484,7 @@
 						<div class="row textRow" >
 							<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 							<div class="col-xs-8 col-sm-10 col-lg-8">
-								In January 2000, Babaji made his first contact with Guruji Naushir. Probably knowing that Guruji is very skeptical by nature and not easily impressed by mediums or spirit communication, Babaji wrote a small note, in English, in His own handwriting and left it on the altar at night. The first words in the note were: "Dear Naush, I am very happy with your work….." and then went on to give him further instructions. From that day onwards a constant flow of communication began coming from Babaji with specific instructions about spreading His spiritual wisdom. Babaji indicated exactly how and through whom He would communicate and send His teaching's to Guruji. I have seen these notes with my own eyes. Sometimes the messages would also come for Guruji's own spiritual practices.
+								In January 2000, Babaji made his first contact with Guruji Naushir. Probably knowing that Guruji is very skeptical by nature and not easily impressed by mediums or spirit communication, Babaji wrote a small note, in English, in His own handwriting and left it on the altar at night. The first words in the note were: "Dear Naush, I am very happy with your work….." and then went on to give him further instructions. From that day onwards a constant flow of communication began coming from Babaji with specific instructions about spreading His spiritual wisdom. Babaji indicated exactly how and through whom He would communicate and send His teachings to Guruji. I have seen these notes with my own eyes. Sometimes the messages would also come for Guruji's own spiritual practices.
 							</div>
 							<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 						</div>
@@ -504,7 +505,7 @@
 						<div class="row textRow" >
 							<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 							<div class="col-xs-8 col-sm-10 col-lg-8">
-								From then onwards to the middle of 2009, Guruji Naushir travelled the length and breadth of India and also Dubai in the Middle East, holding seminars to teach Reiki along with the spiritual wisdom he received from Babaji. Those who wanted to go to a higher spiritual level, he would give Shaktipath Deeksha. By now more than five thousand people had attended the programmes conducted by Guruji. In this period he set up his organization called Tad Ekam.
+								From then onwards to the middle of 2009, Guruji Naushir travelled the length and breadth of India and also Dubai in the Middle East, holding seminars to teach Reiki along with the spiritual wisdom he received from Babaji. Those who wanted to go to a higher spiritual level, he would give Shaktipath Deeksha. By now more than five thousand people had attended the programmes conducted by Guruji. In this period he set up his organization called Tadekam.
 							</div>
 							<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 						</div>
@@ -525,7 +526,7 @@
 						<div class="row textRow" >
 							<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 							<div class="col-xs-8 col-sm-10 col-lg-8">
-								Then two years later, around January 2012, Guruji kept receiving communication from Babaji saying that he must take further training under a new Guru. Seizing this opportunity, Guruji Naushir decided to request Babaji to become his Guru. A few days later, in September 2012, Babaji communicated back accepting Guruji Naushir as his disciple. Along with that message came a set of 18 stringent conditions. Of course, Guruji was very happy to accept every one of those conditions. Once again a great Master had met a perfect Disciple.
+								Then two years later, around January 2012, Guruji kept receiving communication from Babaji saying that he must take further training under a new Guru. Seizing this opportunity, Guruji Naushir decided to request Babaji to become his Guru. A few days later, in September 2012, Babaji communicated back accepting Guruji Naushir as his disciple. Along with that message came a set of 18 stringent conditions. Of course, Guruji was very happy to accept each one of those conditions. Once again a great Master had met a perfect Disciple.
 							</div>
 							<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 						</div>
@@ -539,7 +540,7 @@
 						<div class="row textRow" >
 							<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 							<div class="col-xs-8 col-sm-10 col-lg-8">
-								I have tried to tell Guruji's life-story in minimum words possible. But my greatest joy has been closely watching the interaction between spiritual giants like Babaji and Guruji or Guruji and Govindagiri Swamiji. Particularly exciting for me is the relationship between Babaji and Guruji. It is like watching two champions in a battle of wits, but sprinkled with humor and deep love.
+								I have tried to tell Guruji's life-story in minimum words possible. But my greatest joy has been closely watching the interaction between spiritual giants like Babaji and Guruji or Govindagiri Swamiji and Guruji. Particularly exciting for me is the relationship between Babaji and Guruji. It is like watching two champions in a battle of wits, but sprinkled with humor and deep love.
 							</div>
 							<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 						</div>
@@ -716,7 +717,7 @@
 										</div>
 										<div class="programTitle">Dhyaan Shuddhi Meditation</div>
 										<div class="row programShortDescription">
-											An intense Shiva-centric meditation program to remove negativity through by chanting of Mantras and reciting Stotras.
+											An intense Shiva-centric meditation program to remove negativity through chanting of Mantras and reciting Stotras.
 										</div>
 										<div class="row">
 											<div class="col-xs-4 col-lg-4"></div>
@@ -792,7 +793,7 @@
 									<div class="row">
 										<img src="images/fun_connect.png" alt=""/>
 									</div>
-									<div class="programTitle">Fun Connect</div>
+									<div class="programTitle">FunConnect</div>
 									<div class="row programShortDescription">
 										4 Years to 7 Years
 									</div>
@@ -801,7 +802,7 @@
 									<div class="row">
 										<img src="images/mind_connect.png" alt=""/>
 									</div>
-									<div class="programTitle">Mind Connect</div>
+									<div class="programTitle">MindConnect</div>
 									<div class="row programShortDescription">
 										8 Years to 10 Years
 									</div>
@@ -810,7 +811,7 @@
 									<div class="row">
 										<img src="images/soul_connect.png" alt=""/>
 									</div>
-									<div class="programTitle">Soul Connect</div>
+									<div class="programTitle">SoulConnect</div>
 									<div class="row programShortDescription">
 										11 Years to 14 Years
 									</div>
@@ -1012,7 +1013,7 @@
 									<div class="col-xs-2 hideForDesktop"></div>
 								</div>
 								<div class="row galleryImageDescription">
-									Guruji With Govindagiri Swamiji
+									Govindagiri Swamiji with Guruji
 								</div>
 							</div>
 							<div class="col-xs-12 col-lg-3 galleryImage">
@@ -1024,7 +1025,7 @@
 										<div class="col-xs-2 hideForDesktop"></div>
 									</div>
 								<div class="row galleryImageDescription">
-									Guruji Naushir & Govindagiri Swamiji
+									 Govindagiri Swamiji & Guruji Naushir
 								</div>
 							</div>
 							<div class="col-xs-12 col-lg-3 galleryImage">
@@ -1062,7 +1063,7 @@
 											<div class="col-xs-2 hideForDesktop"></div>
 										</div>
 								<div class="row galleryImageDescription">
-									Grihapravesh Dhyanmandir, Pune
+									Grihapravesh at Dhyanmandir, Pune
 								</div>
 							</div>
 							<div class="col-xs-12 col-lg-3 galleryImage">
@@ -1074,7 +1075,7 @@
 										<div class="col-xs-2 hideForDesktop"></div>
 									</div>
 								<div class="row galleryImageDescription">
-									Grihapravesh Dhyanmandir, Pune
+									Grihapravesh at Dhyanmandir, Pune
 								</div>
 							</div>
 							<div class="col-xs-12 col-lg-3 galleryImage">
@@ -1288,12 +1289,12 @@
 					<div class="col-xs-10 col-lg-8 applyZeroPadding">
 						<div class="row contactUsRow">
 							<div class="col-xs-12 col-lg-12">
-								Call Us On : +91 7045504117
+								Call us on : +91 7045504117
 							</div>
 						</div>
 						<div class="row contactUsRow">
 							<div class="col-xs-12 col-lg-12">
-								Email Us On : babajitadekam@gmail.com
+								Email us on : babajitadekam@gmail.com
 							</div>
 						</div>
 						<div class="row contactUsRow">
@@ -1302,10 +1303,10 @@
 								<div class="row contactUsForm">
 									<div class="col-xs-12 col-lg-12">
 										<div class="row">
-											Kindly Fill The Form Below
+											Kindly fill the form below
 										</div>
 										<div class="row">
-											And We Will Get In Touch With You Shortly
+											and we will get in touch with you shortly
 										</div>
 										<form id="formContactUs" onsubmit="return false">
 											<div class="row contactDetailsRow">
@@ -1411,7 +1412,7 @@
 								<div class="row bookDescription">
 									<div class="col-xs-1 col-lg-2"></div>
 									<div class="col-xs-10 col-lg-8">
-										Amrit originates from the Sanskrit word Amrita, which means Immortal. Amrit - the book is a work of deep love and wisdom from the immortal sage Mahavatar Babaji as communicated to Guruji Naushir. It is a guide to practical spirituality, filled with incisive insights and spiced with love and humour. It touches all aspects of life and enumerates on how to be in the world, but not OF this world; making our journey on the planet balanced, enjoyable and elevating. This book is a collection of articles written by Guruji Naushir to communicate with his numerous followers during his years of tapas. Many of his disciples have asked questions pertaining to his thought provoking articles. This to and fro communication has also been included, as it reveals a fresh perspective and clarifies the point more lucidly.
+										Amrit originates from the Sanskrit word Amrita, which means Immortal. Amrit - the book is a work of deep love and wisdom from the immortal sage Mahavatar Babaji as communicated to Guruji Naushir. It is a guide to practical spirituality, filled with incisive insights and spiced with love and humour. It touches all aspects of life and enumerates on how to be in the world, but not of this world; making our journey on the planet balanced, enjoyable and elevating. This book is a collection of articles written by Guruji Naushir to communicate with his numerous followers during his years of tapas. Many of his disciples have asked questions pertaining to his thought provoking articles. This to and fro communication has also been included, as it reveals a fresh perspective and clarifies the point more lucidly.
 										<div class="row">
 											<div class="btn btn-primary"><a href="https://www.amazon.in/Wisdom-Mahavatar-Babaji-Guruji-Naushir/dp/9383952369/ref=sr_1_1?s=books&ie=UTF8&qid=1551202000&sr=1-1" target="_blank">Buy Now</a></div>
 										</div>
