--- a/index.html
+++ b/index.html
@@ -87,7 +87,16 @@
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentAboutMeMenu">
-				About Swapnali
+				<div class="col-md-3"></div>
+				<div class="col-md-6">
+                    <div class="aboutMeImageHolder">
+                        <img src="images/about_me.png"/>
+                    </div>
+                    <div class="aboutMeContent">
+                        Lorem Ipsum
+                    </div>
+                </div>
+				<div class="col-md-3"></div>
 			</div>
 			<div class="row mainContent" id="mainContentConnectMenu">
 				Connect
